--- a/server/package.json
+++ b/server/package.json
@@ -50,6 +50,7 @@
     "typescript": "~5.7"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
     "pino-pretty": "^13.0.0",
     "@adonisjs/auth": "^9.3.1",
     "@adonisjs/core": "^6.17.2",
