--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -9,7 +9,8 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@shared/*": ["../shared/src/*"]
     },
 
     /* Bundler mode */
