--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,7 +7,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@shared/*": ["../shared/src/*"],
+      "@shared": ["../shared/src/index.ts"]
     }
   }
 }
