fix(api): update PipelineRun status on claim and on job finish

--- a/turbo.json
+++ b/turbo.json
@@ -36,6 +36,13 @@
       ],
       "env": ["NODE_ENV", "PORT", "VITE_*"]
     },
+    "install": {
+      "cache": false,
+      "persistent": false,
+      "inputs": ["package.json", "bun.lock"],
+      "outputs": [],
+      "env": ["NODE_ENV"]
+    },
     "lint": {
       "dependsOn": ["^build"],
       "inputs": [
