--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dev": "turbo dev",
     "dev:client": "turbo dev --filter=client",
     "dev:server": "turbo dev --filter=server",
+    "dev:runner": "turbo dev --filter=server --filter=runner",
     "build": "turbo build",
     "build:client": "turbo build --filter=client",
     "build:server": "turbo build --filter=server",
