--- a/runner/package.json
+++ b/runner/package.json
@@ -5,11 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "bun run src/index.ts",
-    "start": "bun run src/index.ts"
+    "start": "bun run src/index.ts",
+    "lint": "echo 'no lint'"
   },
   "dependencies": {
     "axios": "^1.8.4",
     "dockerode": "^4.0.2"
+  },
+  "devDependencies": {
+    "@types/dockerode": "^3.3.25",
+    "server": "workspace:*"
   }
 }
 
