chore(dev): expose API on 0.0.0.0 and align dev ports
- Map dev API to localhost:12000, nginx to 12002\n- Set HOST=0.0.0.0 and PORT=3333 for containers\n- Update client base URL to http://localhost:12000\n- Keep prod compose aligned (defensive)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
     env_file:
       - ./server/.env
     restart: unless-stopped
+    environment:
+      - HOST=0.0.0.0
+      - PORT=3333
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
@@ -22,7 +25,7 @@ services:
       dockerfile: nginx.Dockerfile
     container_name: template-nextgen-nginx
     ports:
-      - "12001:80"
+      - "12002:80"
     restart: unless-stopped
     depends_on:
       - api
