--- a/server/package.json
+++ b/server/package.json
@@ -50,6 +50,7 @@
     "typescript": "~5.7"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "ajv": "^8.17.1",
     "pino-pretty": "^13.0.0",
     "@adonisjs/auth": "^9.3.1",
