--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,20 @@ build
 .env.production.local
 .env*.local
 
+# Environment (avoid committing secrets)
+.env.prod
+.env.production
+.env.staging
+server/.env
+server/.env.*
+client/.env
+client/.env.*
+runner/.env
+runner/.env.*
+!**/.env.example
+!**/.env.*.example
+!**/.env.sample
+
 # logs
 npm-debug.log*
 yarn-debug.log*
