--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,5 @@
 services:
-  api:
+  api-prod:
     build:
       context: ./server
       dockerfile: Dockerfile
@@ -13,12 +13,16 @@ services:
       - NODE_ENV=production
       - HOST=0.0.0.0
       - PORT=3333
+      - WORKSPACE_DIR=${HOST_WORKSPACE_DIR:-/var/lib/shiply/workspace}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ${HOST_WORKSPACE_DIR:-/var/lib/shiply/workspace}:${HOST_WORKSPACE_DIR:-/var/lib/shiply/workspace}
     networks:
-      - app-network
+      app-network:
+        aliases:
+          - api
 
-  nginx:
+  nginx-prod:
     build:
       context: .
       dockerfile: nginx.Dockerfile
@@ -27,9 +31,27 @@ services:
       - "12002:80"
     restart: unless-stopped
     depends_on:
-      - api
+      - api-prod
     environment:
       - NGINX_PORT=80
+    networks:
+      - app-network
+
+  runner-prod:
+    image: oven/bun:1-alpine
+    container_name: shiply-runner-prod
+    working_dir: /app
+    command: sh -lc "apk add --no-cache docker-cli docker-cli-compose && bun run src/index.ts"
+    environment:
+      - API_URL=http://api-prod:3333
+      - RUNNER_NAME=runner-prod
+    volumes:
+      - ./runner:/app:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ${HOST_WORKSPACE_DIR:-/var/lib/shiply/workspace}:${HOST_WORKSPACE_DIR:-/var/lib/shiply/workspace}
+    depends_on:
+      - api-prod
+    restart: unless-stopped
     networks:
       - app-network
 
