chore(release): update changelog for 0.3.0

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "author": "Steve Simkins",
   "devDependencies": {
     "bun-types": "latest",
+    "conventional-changelog-angular": "^8.0.0",
+    "conventional-changelog-cli": "^5.0.0",
     "turbo": "^2.5.5"
   },
   "peerDependencies": {
