--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -46,7 +46,7 @@ services:
       - API_URL=http://api-prod:3333
       - RUNNER_NAME=runner-prod
     volumes:
-      - ./runner:/app:ro
+      - ./runner:/app
       - /var/run/docker.sock:/var/run/docker.sock
       - ${HOST_WORKSPACE_DIR:-/var/lib/shiply/workspace}:${HOST_WORKSPACE_DIR:-/var/lib/shiply/workspace}
     depends_on:
